# cookiecutter-scientific-research

./: .gitignore  LICENSE  Makefile  README.md  ccsr-help.json  ccsr.json  cookiecutter.json  dev-requirements.txt  pyproject.toml
.github/workflows/: release.yml  tests.yml
ccsr/: __main__.py  monkey_patch.py
ccsr/hook_utils/: dependencies.py
docs/: README.md  mkdocs.yml
docs/docs/: all-options.md  contributing.md  index.md  opinions.md  using-the-template.md  v1.md
docs/scripts/: configuration-table.py  generate-termynal.py
hooks/: post_gen_project.py  pre_prompt.py
tests/: conda_harness.sh  conftest.py  pipenv_harness.sh  test_creation.py  uv_harness.sh  virtualenv_harness.sh
{{ cookiecutter.repo_name }}/: .env  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
{{ cookiecutter.repo_name }}/.agents/rules/: python-style.md  testing.md
{{ cookiecutter.repo_name }}/.claude/rules/: data-formats.md
{{ cookiecutter.repo_name }}/.claude/skills/uv-package-manager/: SKILL.md
{{ cookiecutter.repo_name }}/{{ cookiecutter.module_name }}/: config.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.module_name }}/analyze/: analysis.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.module_name }}/data/: cross_language.py  dataset.py  large_query.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.module_name }}/features/: features.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.module_name }}/models/: model.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.module_name }}/training/: predict.py  train.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.module_name }}/utils/: tools.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.module_name }}/visualization/: plots.py
