[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "ccsr"

[project]
name = "cookiecutter-scientific-research"
version = "1.3.0"
description = "A logical, reasonably standardized but flexible project structure for doing and sharing scientific research."
authors = [
  { name = "Wenjie Xu", email = "wenjie.xu.cn@outlook.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["cookiecutter", "template", "science", "research", "reproducible-research", "project-structure"]
requires-python = ">=3.10"
dependencies = [
  "click",
  "cookiecutter",
  "tomlkit"
]

[project.optional-dependencies]
dev = [
    "ansi2html",
    "build",
    "flit_core",
    "pytest",
    "ruff",
    "twine",
]

test = [
    "pytest-cov",
    "hypothesis",
]

docs = [
    "mkdocs",
    "mkdocs-material",
]


[project.scripts]
ccsr = "ccsr.__main__:main"

[project.urls]
"Source Code" = "https://github.com/vncntvx/cookiecutter-scientific-research/"
"Documentation" = "https://github.com/vncntvx/cookiecutter-scientific-research/blob/master/README.md"
"Issues" = "https://github.com/vncntvx/cookiecutter-scientific-research/issues"

[tool.ruff]
line-length = 88
src = ["ccsr", "hooks", "tests"]
include = ["pyproject.toml", "ccsr/**/*.py", "hooks/**/*.py", "tests/**/*.py"]
exclude = [
    ".eggs",
    "*.egg-info",
    ".git",
    ".mypy_cache",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    "{{ cookiecutter.repo_name }}",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501", # Line length (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"ccsr/__main__.py" = ["E402"]  # Module imports must be at top, but monkey-patching requires specific order

[tool.ruff.format]
quote-style = "double"
indent-style = "space"