[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = {{ cookiecutter.module_name|tojson }}
version = "0.0.1"
description = {{ cookiecutter.description|tojson }}
authors = [
  { name = {{ cookiecutter.author_name|tojson }}, email = {{ cookiecutter.author_email|tojson }} },
]
{% if cookiecutter.open_source_license != 'No license file' %}license = { file = "LICENSE" }{% endif %}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    {% if cookiecutter.open_source_license == 'MIT' %}"License :: OSI Approved :: MIT License"{% elif cookiecutter.open_source_license == 'BSD-3-Clause' %}"License :: OSI Approved :: BSD License"{% endif %}
]
{% if cookiecutter.linting_and_formatting == 'flake8+black+isort' %}
[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["{{ cookiecutter.module_name }}"]
force_sort_within_sections = true
{% endif %}
{% if cookiecutter.linting_and_formatting == 'ruff' %}
[tool.ruff]
line-length = 99
src = ["{{ cookiecutter.module_name }}"]
include = ["pyproject.toml", "{{ cookiecutter.module_name }}/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"] # Add import sorting
isort = {known-first-party = ["src"], force-sort-within-sections = true}
{% endif %}

{% if cookiecutter.notebook == 'marimo' %}
[tool.marimo]
runtime = { auto_instantiate = false, auto_reload = "lazy" }
save = { autosave = "after_delay", autosave_delay = 5, format_on_save = true }
formatting = { line_length = 120 }
display = { default_width = "full" }
package_management = { manager = "{{ cookiecutter.environment_manager }}" }
experimental = { lsp = true }
diagnostics = { enabled = true }

[tool.marimo.language_servers.pylsp]
enabled = true
enable_mypy = true
{% if cookiecutter.linting_and_formatting == 'ruff' %}
enable_ruff = true 
{% endif %}
{% if cookiecutter.linting_and_formatting == 'flake8+black+isort' %}
enable_flake8 = true 
enable_pylint = true
enable_pyflakes = true  
{% endif %}
{% endif %}